--- a/src/ui/css/style.css
+++ b/src/ui/css/style.css
@@ -58,17 +58,21 @@ a, a:hover, a:visited {
 	padding: 0
 }
 #admin section ul li {
-	padding: 6px;
-	border-bottom: 1px solid #fff
+	padding: 6px 0;
+	border-bottom: 1px solid #eee
 }
 #admin section ul li img {
-	display: inline-block;
+	display: block;
 	width: 50px;
 	height: 50px;
+    margin-right: 12px;
 }
 #admin section ul li h3 {
-	display: inline;
-	padding-left: 20px
+    font-size: 20px;
+    margin: 0 0 5px 0
+}
+#admin section ul li .tools > * {
+    margin-right: 8px
 }
 
 /* set */
