Replace placeholder provider

--- a/src/ui/tmpl/album.twig
+++ b/src/ui/tmpl/album.twig
@@ -35,7 +35,7 @@
                          width="{{ photo.th_w }}"
                          height="{{ photo.th_h }}"
                          alt="{{ photo.title }}"
-                         src="https://via.placeholder.com/{{ photo.th_w }}x{{ photo.th_h}}/111111/111111"
+                         src="https://via.assets.so/img.jpg?w={{ photo.th_w }}&h={{ photo.th_h}}&bg=#111111"
                     />
                     <div class="caption hidden">
                         {{ photo.title }}
