--- a/src/ui/tmpl/admin/album.twig
+++ b/src/ui/tmpl/admin/album.twig
@@ -1,82 +1,56 @@
-<div class="media album">
-    <div class="media-left">
-        <a href="{{ url_for('album', { 'album': album.id }) }}" target="_blank">
-            <img
-                class="media-object"
-                src="{{ album.coverItem.url }}"
-                title="{{ album.title }}"
-                alt="{{ album.title }}"/>
-        </a>
+{% extends '@__main__/layout.twig' %}
+
+{% block styles %}
+    <link rel="stylesheet" type="text/css" href="{{ base_url }}/ui/lib/jQuery-File-Upload-9.12.1/css/jquery.fileupload.css" media="screen" />
+{% endblock %}
+
+{% block contents %}
+    <div id="admin">
+        {% include 'admin/includes/navbar.twig' %}
+        <section class="col-xs-12">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                        <span class="pull-right provider-tools">
+                            {% if provider.authenticated %}
+                                <div class="btn-group btn-group-sm">
+                                    <a href="{{ url_for('admin') }}" class="btn btn-default" title="Tagasi">
+                                        Tagasi
+                                    </a>
+                                    <a href="{{ full_url_for('root') }}upload/{{ album.id }}" class="fileupload fileinput-button btn btn-default" title="Lae pilte juurde">
+                                        <i class="glyphicon glyphicon-open"></i> Lae pilte
+                                        <input type="file" name="files[]" accept="image/*" multiple />
+                                    </a>
+                                </div>
+                            {% else %}
+                                <a href="{{ url_for('provider_login', { 'provider': provider.id }) }}" title="Log in" class="btn btn-link btn-sm">
+                                    Autoriseeri
+                                    <i class="glyphicon glyphicon-log-in"></i>
+                                </a>
+                            {% endif %}
+                        </span>
+                            <h2 class="panel-title">Muuda: {{ album.title }}</h2>
+                        </div>
+                        <div class="panel-body thumbs">
+                            {% if items | length < 1 %}
+                                Album on tühi
+                            {% else %}
+                                {% for item in items %}
+                                    {% include 'admin/includes/item.twig' %}
+                                {% endfor %}
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-    <div class="media-body info">
-        <h4 class="media-heading">
-            <span class="pull-right">
-            {% if album.itemChange %}
-                {% if album.itemChange.name == 'DELETE' %}
-                <span class="label label-danger">{{ album.itemChange.name }}</span>
-                {% elseif album.itemChange.name == 'CHANGE' %}
-                <span class="label label-warning">{{ album.itemChange.name }}</span>
-                {% elseif album.itemChange.name == 'NEW' %}
-                <span class="label label-primary">{{ album.itemChange.name }}</span>
-                {% elseif album.itemChange.name == 'OK' %}
-                <span class="label label-success">{{ album.itemChange.name }}</span>
-                {% endif %}
-            {% else %}
-                {% if album.public %}
-                    <span class="label label-success">AVALIK</span>
-                {% else %}
-                    <span class="label label-danger">PRIVAATNE</span>
-                {% endif %}
-            {% endif %}
-            </span>
-            <a href="{{ url_for('album', { 'album': album.id }) }}" target="_blank">{{ album.title }}</a>
-        </h4>
-        <div  class="text-muted small">{{ album.description }}</div>
-        <div  class="text-muted small">{{ album.id }} | {{ album.fid }}</div>
-        <div>
-            <span>
-                <i class="glyphicon glyphicon-camera"></i>
-                {{ album.photos }}
-            </span>
-            <span>
-                <i class="glyphicon glyphicon-film"></i>
-                {{ album.videos }}
-            </span>
-        </div>
-        <div class="album-tools">
-            {% if not album.itemChange and album.id %}
-                <a href="{{ full_url_for('root') }}upload/{{ album.id }}" class="fileupload fileinput-button" title="Lae pilte juurde">
-                    <i class="glyphicon glyphicon-open"></i> Upload
-                    <input type="file" name="files[]" accept="image/*" multiple />
-                </a>
-                <a href="{{ url_for('album_delete', { 'provider': provider.id, 'album': album.id }) }}" class="album-delete" title="Eemalda album">
-                    <i class="glyphicon glyphicon-remove"></i> Eemalda album
-                </a>
-                {% if provider.editable %}
-                    <a href="{{ url_for('provider_album', { 'provider': provider.id, 'album': album.id }) }}" title="Muuda">
-                        Muuda
-                    </a>
-                {% endif %}
-                {% if album.public %}
-                    <a href="{{ url_for('provider_album', { 'provider': provider.id, 'album': album.id }) }}" class="album-set-private" title="Määra privaatseks">
-                        Määra privaatseks
-                    </a>
-                {% else %}
-                    <a href="{{ url_for('provider_album', { 'provider': provider.id, 'album': album.id }) }}" class="album-set-public" title="Määra avalikuks">
-                        Määra avalikuks
-                    </a>
-                {% endif %}
-            {% else %}
-                {% if provider.editable %}
-                    <a href="{{ url_for('provider_autorotate', { 'provider': provider.id, 'album': album.fid }) }}" title="Autorotate">
-                        <i class="glyphicon glyphicon-retweet"></i> Autorotate
-                    </a>
-                {% endif %}
-                <a href="{{ url_for('import_sync', { 'provider': provider.id, 'album': album.fid }) }}" title="Impordi see album">
-                    <i class="glyphicon glyphicon-save"></i> Impordi see album
-                </a>
-            {% endif %}
-        </div>
-        <div class="bar"></div>
-    </div>
-</div>
+{% endblock %}
+
+{% block scripts %}
+    <script src="{{ base_url }}/ui/lib/jQuery-File-Upload-9.12.1/js/vendor/jquery.ui.widget.js" type="text/javascript"></script>
+    <script src="{{ base_url }}/ui/lib/jQuery-File-Upload-9.12.1/js/jquery.fileupload.js" type="text/javascript"></script>
+    <script src="{{ base_url }}/ui/lib/jquery/jquery.lazyload.min.js" type="text/javascript"></script>
+    <script src="{{ base_url }}/ui/js/admin.js" type="text/javascript"></script>
+{% endblock %}
