--- a/src/ui/tmpl/admin/import.twig
+++ b/src/ui/tmpl/admin/import.twig
@@ -18,7 +18,7 @@
                                     <a href="{{ url_for('admin') }}" class="btn btn-default" title="Tagasi">
                                         <i class="glyphicon glyphicon-arrow-left"></i> Tagasi
                                     </a>
-                                    <a href="{{ url_for('import_sync', { 'provider': provider.id }) }}" class="btn btn-danger" title="Impordi kõik">
+                                    <a href="#" class="btn btn-danger album-import-all" title="Impordi kõik">
                                         <i class="glyphicon glyphicon-save"></i> Impordi kõik
                                     </a>
                                 </div>
