--- a/src/ui/css/style.css
+++ b/src/ui/css/style.css
@@ -30,6 +30,44 @@ a, a:hover, a:visited {
     text-decoration: none;
 }
 
+.spinner {
+    border-radius: 100%;
+    position: relative;
+    margin: 0 auto;
+}
+
+
+.spinner span{
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    background-color: #3498db;
+    opacity: 0;
+}
+
+.spinner span:nth-child(1){
+    animation: opacitychange 1s ease-in-out infinite;
+}
+
+.spinner span:nth-child(2){
+    animation: opacitychange 1s ease-in-out 0.33s infinite;
+}
+
+.spinner span:nth-child(3){
+    animation: opacitychange 1s ease-in-out 0.66s infinite;
+}
+
+@keyframes opacitychange{
+    0%, 100% {
+        opacity: 0;
+    }
+
+    60% {
+        opacity: 1;
+    }
+}
+
 /* login */
 #loginform {
     width:400px;
@@ -161,9 +199,10 @@ a, a:hover, a:visited {
 #viewbox .tools {
     position: absolute;
     bottom: 0;
+    left: 0;
+    right: 0;
     background: rgba(0,0,0,0.4);
     padding:4px;
-    width:100%;
     z-index:1002;
     color: #fff;
 }
