--- a/src/ui/tmpl/admin/admin.twig
+++ b/src/ui/tmpl/admin/admin.twig
@@ -10,7 +10,7 @@
         <section class="col-xs-12">
             <div class="row">
                 {% for key, provider in providers %}
-                    <div class="col-xs-12 col-sm-6">
+                    <div class="provider col-xs-12 col-sm-6">
                         <div class="panel panel-default">
                             <div class="panel-heading">
                             <span class="pull-right provider-tools">
