--- a/src/ui/tmpl/admin/includes/album.twig
+++ b/src/ui/tmpl/admin/includes/album.twig
@@ -1,4 +1,4 @@
-<div class="media album">
+<div class="media album" id="{{ album.id }}" data-fid="{{ album.fid }}">
     <div class="media-left">
         <a href="{{ url_for('album', { 'album': album.id }) }}" target="_blank">
             <img
@@ -7,44 +7,62 @@
                 title="{{ album.title }}"
                 alt="{{ album.title }}"/>
         </a>
+
     </div>
     <div class="media-body info">
         <h4 class="media-heading">
-            <span class="pull-right">
-            {% if album.itemChange %}
-                {% if album.itemChange.name == 'DELETE' %}
-                <span class="label label-danger">{{ album.itemChange.name }}</span>
-                {% elseif album.itemChange.name == 'CHANGE' %}
-                <span class="label label-warning">{{ album.itemChange.name }}</span>
-                {% elseif album.itemChange.name == 'NEW' %}
-                <span class="label label-primary">{{ album.itemChange.name }}</span>
-                {% elseif album.itemChange.name == 'OK' %}
-                <span class="label label-success">{{ album.itemChange.name }}</span>
-                {% endif %}
-            {% else %}
-                {% if album.public %}
-                    <span class="label label-success">AVALIK</span>
+            <div class="pull-right spinner hidden">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <span class="pull-right status">
+                {% if album.status %}
+                    {% if album.status.type.name == 'DELETE' %}
+                    <span class="label label-danger">{{ album.status.type.name }}</span>
+                    {% elseif album.status.type.name == 'CHANGE' %}
+                    <span class="label label-warning">{{ album.status.type.name }}</span>
+                    {% elseif album.status.type.name == 'NEW' %}
+                    <span class="label label-primary">{{ album.status.type.name }}</span>
+                    {% elseif album.status.type.name == 'OK' %}
+                    <span class="label label-success">{{ album.status.type.name }}</span>
+                    {% endif %}
                 {% else %}
-                    <span class="label label-danger">PRIVAATNE</span>
+                    {% if album.public %}
+                        <span class="label label-success">AVALIK</span>
+                    {% else %}
+                        <span class="label label-danger">PRIVAATNE</span>
+                    {% endif %}
                 {% endif %}
-            {% endif %}
             </span>
             <a href="{{ url_for('album', { 'album': album.id }) }}" target="_blank">{{ album.title }}</a>
         </h4>
         <div  class="text-muted small">{{ album.description }}</div>
         <div  class="text-muted small">{{ album.id }} | {{ album.fid }}</div>
-        <div>
+        <div class="items-count {{ album.status and album.status.type.name == 'OK' ? 'text-success' : '' }}">
             <span>
                 <i class="glyphicon glyphicon-camera"></i>
-                {{ album.photos }}
+                <span class="photos-count">{{ album.photos }}</span>
             </span>
             <span>
                 <i class="glyphicon glyphicon-film"></i>
-                {{ album.videos }}
+                <span class="videos-count">{{ album.videos }}</span>
             </span>
         </div>
+        <div class="text-danger status-items-count">
+        {% if album.status and album.status.type.name == 'CHANGE' and album.status.data %}
+            <span>
+                <i class="glyphicon glyphicon-camera"></i>
+                <span class="photos-count">{{ album.status.data.photos }}</span>
+            </span>
+            <span>
+                <i class="glyphicon glyphicon-film"></i>
+                <span class="videos-count">{{ album.status.data.videos }}</span>
+            </span>
+        {% endif %}
+        </div>
         <div class="album-tools">
-            {% if not album.itemChange and album.id %}
+            {% if not album.status and album.id %}
                 <a href="{{ full_url_for('root') }}upload/{{ album.id }}" class="fileupload fileinput-button" title="Lae pilte juurde">
                     <i class="glyphicon glyphicon-open"></i> Upload
                     <input type="file" name="files[]" accept="image/*" multiple />
@@ -57,23 +75,12 @@
                         Muuda
                     </a>
                 {% endif %}
-                {% if album.public %}
-                    <a href="{{ url_for('provider_album', { 'provider': provider.id, 'album': album.id }) }}" class="album-set-private" title="Määra privaatseks">
-                        Määra privaatseks
-                    </a>
-                {% else %}
-                    <a href="{{ url_for('provider_album', { 'provider': provider.id, 'album': album.id }) }}" class="album-set-public" title="Määra avalikuks">
-                        Määra avalikuks
-                    </a>
-                {% endif %}
+                <a href="{{ url_for('provider_album', { 'provider': provider.id, 'album': album.id }) }}" class="album-set-public" data-public="{{ album.public ? 1 : 0 }}">
+                    {{ album.public ? 'Määra privaatseks' : 'Määra avalikuks' }}
+                </a>
             {% else %}
-                {% if provider.editable and album.itemChange and album.itemChange.name == 'NEW' %}
-                    <a href="{{ url_for('provider_autorotate', { 'provider': provider.id, 'album': album.fid }) }}" title="Autorotate">
-                        <i class="glyphicon glyphicon-retweet"></i> Autorotate
-                    </a>
-                {% endif %}
-                {% if album.itemChange and album.itemChange.name != 'OK' %}
-                <a href="{{ url_for('import_sync', { 'provider': provider.id, 'album': album.fid }) }}" title="Impordi see album">
+                {% if album.status and album.status.type.name != 'OK' %}
+                <a href="{{ url_for('import_sync', { 'provider': provider.id, 'album': album.fid }) }}" class="album-import" title="Impordi see album">
                     <i class="glyphicon glyphicon-save"></i> Impordi see album
                 </a>
                 {% endif %}
