--- a/src/ui/tmpl/album.twig
+++ b/src/ui/tmpl/album.twig
@@ -3,10 +3,10 @@
 {% block meta %}
     <meta property="og:title" content="{{ album.title }}" />
     <meta property="og:url" content="{{ current_url() }}" />
-    <meta property="og:image:width" content="{{ cover.width_c }}" />
-    <meta property="og:image:height" content="{{ set.thumbnail.height_c }}" />
-    <meta property="og:image" content="{{ set.thumbnail.url_c }}" />
-    <link rel="image_src" href="{{ set.thumbnail.url_c }}" />
+    <meta property="og:image:width" content="{{ album.coverItem.sizes.m800.width ?: album.coverItem.width }}" />
+    <meta property="og:image:height" content="{{ album.coverItem.sizes.m800.height ?: album.coverItem.height }}" />
+    <meta property="og:image" content="{{ album.coverItem.sizes.m800.url ?: album.coverItem.url }}" />
+    <link rel="image_src" href="{{ album.coverItem.sizes.m800.url ?: album.coverItem.url }}" />
 {% endblock %}
 
 {% block styles %}
@@ -15,30 +15,30 @@
 
 
 {% block contents %}
-    <header style="background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url({{ set.thumbnail.url_c }})">
-        <h1 class="text-center">{{ set.title }}</h1>
-        {% if set.description is defined %}
-            <h5 class="text-center">{{ set.description }}</h5>
+    <header style="background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url({{ album.coverItem.sizes.m800.url ?: album.coverItem.url }})">
+        <h1 class="text-center">{{ album.title }}</h1>
+        {% if album.description is defined %}
+            <h5 class="text-center">{{ album.description }}</h5>
         {% endif %}
     </header>
     <section>
         <div class="thumbs">
-            {% for photo in set.photo %}
-                <a data-id="{{ photo.id }}" class="viewbox" href="{{ url_for('album', { 'album': set.id, 'photo': photo.id }) }}">
+            {% for photo in items %}
+                <a data-id="{{ photo.id }}" class="viewbox" href="{{ url_for('album', { 'album': album.id, 'item': photo.id }) }}">
                     <img class="lazy"
-                         data-original="{{ photo.url_z }}"
-                         data-vb-src="{{ photo.url_vb }}"
-                         data-vb-w="{{ photo.width_vb }}"
-                         data-vb-h="{{ photo.height_vb }}"
-                         data-img-link="{{ url_for('photo', { 'album': set.id, 'photo': photo.id }) }}"
-                         data-img-download="{{ url_for('photo_download', { 'album': set.id, 'photo': photo.id }) }}"
-                         width="{{ photo.th_w }}"
-                         height="{{ photo.th_h }}"
-                         alt="{{ photo.title }}"
-                         src="https://via.assets.so/img.jpg?w={{ photo.th_w }}&h={{ photo.th_h}}&bg=#111111"
+                         data-original="{{ photo.sizes.m800.url }}"
+                         data-vb-src="{{ photo.sizes.l2048.url }}"
+                         data-vb-w="{{ photo.sizes.l2048.width }}"
+                         data-vb-h="{{ photo.sizes.l2048.height }}"
+                         data-img-link="{{ url_for('item', { 'album': album.id, 'item': photo.id }) }}"
+                         data-img-download="{{ url_for('download', { 'album': album.id, 'item': photo.id }) }}"
+                         width="{{ photo.sizes.s320.width }}"
+                         height="{{ photo.sizes.s320.height }}"
+                         alt="{{ photo.title ?: photo.id }}"
+                         src="https://via.assets.so/img.jpg?w={{ photo.sizes.s320.width }}&h={{ photo.sizes.s320.height }}&bg=#111111"
                     />
-                    <div class="caption hidden">
-                        {{ photo.title }}
+                    <div class="caption">
+                        {{ photo.title ?: photo.id }}
                     </div>
                 </a>
             {% endfor %}
@@ -78,6 +78,9 @@
 {% endblock %}
 
 {% block scripts %}
+    <script type="text/javascript">
+        var basePath = '{{ base_url }}';
+    </script>
     <script src="{{ base_url }}/ui/lib/jquery/touchswipe.js"></script>
     <script src="{{ base_url }}/ui/lib/jquery/jquery.lazyload.min.js" type="text/javascript"></script>
     <script src="{{ base_url }}/ui/lib/justifiedGallery.min/jquery.justifiedGallery.min.js" type="text/javascript"></script>
