--- a/src/ui/tmpl/admin/album.twig
+++ b/src/ui/tmpl/admin/album.twig
@@ -1,56 +1,97 @@
 {% extends '@__main__/layout.twig' %}
 
-{% block styles %}
-    <link rel="stylesheet" type="text/css" href="{{ base_url }}/ui/lib/jQuery-File-Upload-9.12.1/css/jquery.fileupload.css" media="screen" />
+{% block meta %}
+    <meta property="og:title" content="{{ album.title }}" />
+    <meta property="og:url" content="{{ current_url() }}" />
+    <meta property="og:image:width" content="{{ album.coverItem.sizes.m800.width ?: album.coverItem.width }}" />
+    <meta property="og:image:height" content="{{ album.coverItem.sizes.m800.height ?: album.coverItem.height }}" />
+    <meta property="og:image" content="{{ album.coverItem.sizes.m800.url ?: album.coverItem.url }}" />
+    <link rel="image_src" href="{{ album.coverItem.sizes.m800.url ?: album.coverItem.url }}" />
 {% endblock %}
 
+{% block styles %}
+    <link rel="stylesheet" type="text/css" href="{{ base_url }}/ui/lib/justifiedGallery.min/justifiedGallery.min.css" media="screen" />
+{% endblock %}
+
+
 {% block contents %}
-    <div id="admin">
-        {% include 'admin/includes/navbar.twig' %}
-        <section class="col-xs-12">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                        <span class="pull-right provider-tools">
-                            {% if provider.authenticated %}
-                                <div class="btn-group btn-group-sm">
-                                    <a href="{{ url_for('admin') }}" class="btn btn-default" title="Tagasi">
-                                        Tagasi
-                                    </a>
-                                    <a href="{{ full_url_for('root') }}upload/{{ album.id }}" class="fileupload fileinput-button btn btn-default" title="Lae pilte juurde">
-                                        <i class="glyphicon glyphicon-open"></i> Lae pilte
-                                        <input type="file" name="files[]" accept="image/*" multiple />
-                                    </a>
-                                </div>
-                            {% else %}
-                                <a href="{{ url_for('provider_login', { 'provider': provider.id }) }}" title="Log in" class="btn btn-link btn-sm">
-                                    Autoriseeri
-                                    <i class="glyphicon glyphicon-log-in"></i>
-                                </a>
-                            {% endif %}
-                        </span>
-                            <h2 class="panel-title">Muuda: {{ album.title }}</h2>
-                        </div>
-                        <div class="panel-body thumbs">
-                            {% if items | length < 1 %}
-                                Album on tühi
-                            {% else %}
-                                {% for item in items %}
-                                    {% include 'admin/includes/item.twig' %}
-                                {% endfor %}
-                            {% endif %}
-                        </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <a href="{{ url_for('admin') }}" class="btn btn-link navbar-btn navbar-left" title="Tagasi">
+                <i class="glyphicon glyphicon-arrow-left"></i> Tagasi
+            </a>
+
+        </div>
+    </nav>
+    <header style="background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url({{ album.coverItem.sizes.m800.url ?: album.coverItem.url }})">
+        <h1 class="text-center"><span contenteditable="true">{{ album.title }}</span></h1>
+        <textarea>{{ album.description }}</textarea>
+    </header>
+    <section>
+        <div class="thumbs">
+            {% for photo in items %}
+                <a data-id="{{ photo.id }}" data-fid="{{ photo.fid }}" class="viewbox" href="{{ url_for('provider_item', { 'provider': provider.id, 'album': album.id, 'item': photo.id }) }}">
+                    <img class="lazy"
+                         data-original="{{ photo.sizes.m800.url }}"
+                         data-vb-src="{{ photo.sizes.l2048.url }}"
+                         data-vb-w="{{ photo.sizes.l2048.width }}"
+                         data-vb-h="{{ photo.sizes.l2048.height }}"
+                         data-img-link="{{ url_for('item', { 'album': album.id, 'item': photo.id }) }}"
+                         data-img-download="{{ url_for('download', { 'album': album.id, 'item': photo.id }) }}"
+                         width="{{ photo.sizes.s320.width }}"
+                         height="{{ photo.sizes.s320.height }}"
+                         alt="{{ photo.title ?: photo.id }}"
+                         src="https://via.assets.so/img.jpg?w={{ photo.sizes.s320.width }}&h={{ photo.sizes.s320.height }}&bg=#111111"
+                    />
+                    <div class="caption" contenteditable="true" tabindex="{{ loop.index + 1 }}">
+                        {{ photo.title }}
                     </div>
-                </div>
+                    <i class="glyphicon glyphicon-star{{ photo.id == album.coverItem.id ? '' : '-empty' }}"></i>
+                </a>
+            {% endfor %}
+        </div>
+    </section>
+    <!-- viewbox -->
+    <div id="viewbox">
+        <div class="img-container">
+            <div></div>
+        </div>
+        <div class="tools row">
+            <div class="col-xs-4 title">
+                <a href="#" class="" title="Otseviide">
+                    <i class="glyphicon glyphicon-picture"></i>
+                    <span></span>
+                </a>
             </div>
-        </section>
+            <div class="col-xs-4 text-center">
+                <a href="#" class="prev" title="Eelmine">
+                    <i class="glyphicon glyphicon-chevron-left"></i>
+                </a>
+                <a href="#" class="vb-close counter" title="Välju (ESC)"></a>
+                <a href="#" class="next" title="Järgmine">
+                    <i class="glyphicon glyphicon-chevron-right"></i>
+                </a>
+            </div>
+            <div class="col-xs-4 text-right">
+                <a href="#" class="download" title="Lae alla">
+                    <i class="glyphicon glyphicon-save"></i>
+                </a>
+                <a href="#" class="vb-close" title="Välju (ESC)">
+                    <i class="glyphicon glyphicon-remove"></i>
+                </a>
+            </div>
+        </div>
     </div>
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ base_url }}/ui/lib/jQuery-File-Upload-9.12.1/js/vendor/jquery.ui.widget.js" type="text/javascript"></script>
-    <script src="{{ base_url }}/ui/lib/jQuery-File-Upload-9.12.1/js/jquery.fileupload.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        const basePath = '{{ base_url }}';
+        const endpoints = {
+            album: '{{ url_for('provider_album', { 'provider': provider.id, 'album': album.id }) }}',
+        }
+    </script>
     <script src="{{ base_url }}/ui/lib/jquery/jquery.lazyload.min.js" type="text/javascript"></script>
-    <script src="{{ base_url }}/ui/js/admin.js" type="text/javascript"></script>
+    <script src="{{ base_url }}/ui/lib/justifiedGallery.min/jquery.justifiedGallery.min.js" type="text/javascript"></script>
+    <script src="{{ base_url }}/ui/js/edit.js" type="text/javascript"></script>
 {% endblock %}
