--- a/src/ui/tmpl/layout.twig
+++ b/src/ui/tmpl/layout.twig
@@ -10,7 +10,7 @@
     {% block styles %}{% endblock %}
     <link rel="stylesheet" type="text/css" href="{{ base_url }}/ui/css/style.css" media="screen" />
 </head>
-<body>
+<body id="{{ editor }}">
     {% block contents %}
     {% endblock %}
     <script src="{{ base_url }}/ui/lib/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
