--- a/src/ui/tmpl/admin/includes/navbar.twig
+++ b/src/ui/tmpl/admin/includes/navbar.twig
@@ -1,6 +1,6 @@
 <header>
     <div class="col-xs-6">
-        <h2>Picu haldur</h2>
+        <h2>Picu haldur <span class="badge">{{ version }}</span></h2>
     </div>
     <div class="col-xs-6 text-right">
         <div class="btn-group">
