--- a/src/ui/css/style.css
+++ b/src/ui/css/style.css
@@ -268,6 +268,8 @@ a, a:hover, a:visited {
     float: right;
     padding: 4px;
     font-size: 2.5rem;
+    color: #FFFFFF90;
+}
+#editor .viewbox i.active {
     color: #f0ad4e;
-    text-shadow: 0 0 BLACK;
 }
