--- a/src/ui/tmpl/album.twig
+++ b/src/ui/tmpl/album.twig
@@ -35,10 +35,10 @@
                          width="{{ photo.sizes.s320.width }}"
                          height="{{ photo.sizes.s320.height }}"
                          alt="{{ photo.title ?: photo.id }}"
-                         src="https://via.assets.so/img.jpg?w={{ photo.sizes.s320.width }}&h={{ photo.sizes.s320.height }}&bg=#111111"
+                         src="{{ placeholder(photo.sizes.s320.width, photo.sizes.s320.height, photo.title ?: photo.id) }}"
                     />
                     <div class="caption">
-                        {{ photo.title ?: photo.id }}
+                        {{ photo.title ?: photo.fid }}
                     </div>
                 </a>
             {% endfor %}
